[package]
name = "entropic_void"
version = "0.1.0"
edition = "2024"
authors = ["Albin Sjögren <albin@sjoegren.se>"]
description = "Conservative multi-mode energy lattice simulator for cosmic web exploration"
readme = "README.md"
repository = "https://github.com/resonant-jovian/void.git"
license = "GPL-3.0"
keywords = ["cosmology", "simulation", "physics", "dark-matter", "lattice"]
categories = ["science", "simulation"]

[lib]
name = "entropic_void"
path = "src/lib.rs"

[dependencies]
# Linear algebra and numerical computation
nalgebra = { version = "0.33", features = ["std"] }
nalgebra-lapack = { version = "0.25", optional = true }  # For eigenvalue decomposition
num-complex = "0.4.6"

# Parallelism and performance
rayon = "1.11.0"

# Random number generation
rand = { version = "0.9.2", features = ["small_rng"] }
rand_xoshiro = "0.6"
rand_distr = "0.4"

# FFT for spectral analysis
rustfft = "6.2"

# Data serialization and I/O
arrow = { version = "53", features = ["ipc"] }
parquet = { version = "53", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
approx = "0.5"  # For floating-point comparisons in tests
criterion = "0.5"  # Benchmarking

[features]
# Keep LAPACK/BLAS integration opt-in so the crate builds cleanly
# even on systems without native linear algebra libraries.
# Enable with: `--features lapack` if you have BLAS/LAPACK installed.
default = []
lapack = ["nalgebra-lapack"]  # Enable LAPACK backend for faster eigenvalues
simd = []  # Future SIMD optimizations


