[package]
name = "void"
version = "0.1.0"
edition = "2024"
authors = ["Albin Sjögren <albin@sjoegren.se> <albin@malmo.skaggbyran.se>"]
description = "A library for me to have some fun with the funtamental laws of reality, nothing to see here"
readme = "README.md"
repository = "https://github.com/bearded-albin/void.git"
license-file = "LICENSE"

[dependencies]
rand = { version = "0.9.2", features = ["small_rng"]}
rayon = "1.11.0"